# pyodbc-mcp-server

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_AUDIT_REPORT.md  PYPI_PACKAGE_VERIFICATION.md  README.md  RELEASE_STATUS.md  ROADMAP.md  SECURITY.md  SECURITY_FIX_SUMMARY.md  SECURITY_INCIDENT_2026-01-02.md  SECURITY_MITIGATION_COMPLETE.md  config.example.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
dev/: SESSION_HANDOFF.md
dev/active/: README.md  phase-3-context.md  phase-3-tasks.md
docs/: API.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  IMPLEMENTATION_PLAN.md  ISSUES.md  PHASE_2_PLAN.md  TROUBLESHOOTING.md
src/mssql_mcp_server/: config.py  errors.py  health.py  server.py
tests/: __init__.py  conftest.py  test_async.py  test_config.py  test_errors.py  test_health.py  test_integration.py  test_resources.py  test_server.py
