[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mssql-mcp-server"
version = "0.1.0"
description = "MCP server for read-only SQL Server access via Windows Authentication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jack Jones" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "sql-server",
    "mssql",
    "windows-authentication",
    "claude",
    "claude-code",
    "ai",
    "database"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.1.0",
    "pyodbc>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jjones-wps/mssql-mcp-server"
Repository = "https://github.com/jjones-wps/mssql-mcp-server"
Issues = "https://github.com/jjones-wps/mssql-mcp-server/issues"

[project.scripts]
mssql-mcp-server = "mssql_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mssql_mcp_server"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mssql_mcp_server --cov-report=term-missing"
